# audiodeepfake-detection

./: .flake8  .gitignore  .readthedocs.yml  CITATION.bib  CONTRIBUTING.rst  LICENSE  README.md  noxfile.py  pyproject.toml  readthedocs.yml  requirements.txt  scalograms.py  spectograms.py  squeezepy_test.py  tox.ini
.github/: test.yml
docs/: requirements.txt
models/: model_packetscoif4_none_220_22050_22050_256_1-11025_0.7_0.0004_0.001_128_2_10e_DCNN_signsFalse_augcFalse_augnFalse_power2.0_fbmelgan_1secs_0.pt  model_packetssym5_none_220_22050_22050_256_1-11025_0.7_0.0004_0.001_128_2_10e_DCNN_signsFalse_augcFalse_augnFalse_power2.0_fbmelgan_1secs_0.pt  model_stft_none_220_22050_22050_256_1-11025_0.7_0.0004_0.001_128_2_10e_DCNN_signsFalse_augcFalse_augnFalse_power2.0_fbmelgan_1secs_0.pt
scripts/: __init__.py  analyze_model_diffs.py  atrribute.sh  attribute.sh  attribute_cwt.sh  attribute_stft.sh  attribution.py  avg_energy.py  avg_energy_cwt.py  avg_energy_stft.py  calc_acc_mean.py  classificator.py  clean_up.py  d_learn_direct_train_bin.sh  direct_train_binary_1D_conv.sh  direct_train_binary_2D_conv.sh  down_sample.sh  eval.sh  eval_all.sh  eval_booster.sh  eval_models.sh  eval_models_cwt.sh  eval_models_stft.sh  final_direct_train_binary_2D_conv.sh  final_eval_models.sh  final_prepare_binary_all.sh  final_prepare_binary_allgans.sh  gridsearch_config.py  learn_direct_train_binary_2D_conv.sh  ljspeech_prepare.sh  parameter_count.py  plot_ig.py  prep_ljspeech.sh  prepare_all_binary.sh  prepare_all_dataset.sh  prepare_all_dataset_booster.sh  prepare_asv.sh  prepare_asvspoof.py  prepare_binary_dataset.sh  prepare_binary_datasets.sh  (+42 more)
src/: __init__.py  augmentation.py  cwt.py  cwt_lfcc.py  d_learn_direct_train_classifier.py  data_loader.py  downsample.py  eval_models.py  integrated_gradients.py  models.py  optimizer.py  (+16 more)
(+59 files in other folders)
